--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -56,7 +56,7 @@ p {text-align: center;}
 		<p>Se alguma parte ou disposição dos presentes Termos e Condições de Utilização não for executável ou estiver em conflito com a lei aplicável, a validade das restantes partes ou disposições não será afetada.</p>
 		<br>
 		<h3>Questões</h3>
-		<p>Se tiver alguma questão sobre os presentes Termos e Condições de Utilização, por favor envie-nos o seu pedido de esclarecimento através do nosso formulário online, via <i>e-mail</i>, ou por carta para Sentido Soberano, Lda., Rua da Esperança, nº. 3, 9970-320 Santa Cruz das Flores.</p>
+		<p>Se tiver alguma questão sobre os presentes Termos e Condições de Utilização, por favor envie-nos o seu pedido de esclarecimento via <i>e-mail</i>, para o endereço info@altusvitae.pt, ou por carta, para Sentido Soberano, Lda., Rua da Esperança, nº. 3, 9970-320 Santa Cruz das Flores.</p>
 		<br>
 		<h3>Lei aplicável</h3>
 		<p>À gestão, administração, utilização e aplicação dos Termos e Condições de Utilização do Site é aplicável a lei portuguesa.</p>
