--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -2,9 +2,10 @@
 	<head>
 		<title>Altus Vitae - Termos e Condições</title>
 		<style>
-h1 {text-align: center;}
-h3 {text-align: center;}
-p {text-align: center;}
+			body {font-family: Lato;}
+			h1 {text-align: center;}
+			h3 {text-align: center;}
+			p {text-align: center;}
 
 		</style>	
 	</head>
