--- a/politica_privacidade_cookies.html
+++ b/politica_privacidade_cookies.html
@@ -2,8 +2,9 @@
 	<head>
 		<title>Altus Vitae - Política de Privacidade e <i>Cookies</i></title>
 		<style>
-h1 {text-align: center;}
-p {text-align: center;}
+			body {font-family: Lato;}			
+			h1 {text-align: center;}
+			p {text-align: center;}
 
 		</style>	
 	</head>
@@ -45,7 +46,6 @@ p {text-align: center;}
 			<ol type="a">
 				<li>A Sentido Soberano trata os dados pessoais com o objetivo de dar resposta aos pedidos do Utilizador.</li>
 				<li>O tratamento de dados pessoais do Utilizador, recolhidos por exemplo através do formulário de contacto, serve o propósito de execução de um contrato no qual o titular dos dados é parte interessada ou, em alternativa, uma diligência pré-contratual a pedido do titular dos dados.</li>
-				<li>A Sentido Soberano trata os dados pessoais com o objetivo de dar resposta aos pedidos do Utilizador.</li>
 				</ul>
 			</ol>
 			</li>
