--- a/AltusVitae_temp.html
+++ b/AltusVitae_temp.html
@@ -9,7 +9,7 @@
 		</style>	
 	</head>
 
-	<body align=center>
+	<body align=middle>
 
 		<img src="https://altusvitae.github.io/altusvitae/temporariamente.png" style="height: 100vh">
 
