--- a/AltusVitae_temp.html
+++ b/AltusVitae_temp.html
@@ -9,9 +9,9 @@
 		</style>	
 	</head>
 
-	<body align=middle>
+	<body align=center>
 
-		<img src="https://altusvitae.github.io/altusvitae/temporariamente.png" style="height: 100vh">
+		<img src="https://altusvitae.github.io/altusvitae/temporariamente.png" style="height: 100vh;vertical-align: middle">
 
 	</body>
 </html>
