--- a/AltusVitae_temp.html
+++ b/AltusVitae_temp.html
@@ -3,7 +3,8 @@
 		<title>Altus Vitae</title>
 		<style>
 			body {background-color: eaeae8;
-			}			
+			      vertical-align: middle;
+			}
 
 
 		</style>	
@@ -11,7 +12,7 @@
 
 	<body align=center>
 
-		<img src="https://altusvitae.github.io/altusvitae/temporariamente.png" style="height: 100vh;vertical-align: middle">
+		<img src="https://altusvitae.github.io/altusvitae/temporariamente.png" style="height: 100vh">
 
 	</body>
 </html>
