--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -45,6 +45,10 @@
 		<p>A informação disponibilizada no Site visa essencialmente esclarecer e informar os Utilizadores sobre aspetos relativos à atividade e aos serviços prestados pela Sentido Soberano.</p>
 		<p>Através do Site o Utilizador poderá utilizar as funcionalidades aí disponibilizadas, tais como a solicitação de pedidos de informação através do formulário de contacto disponível no Site.</p>
 		<br>
+		<h3>Cancelamentos e remarcações de serviços</h3>
+		<p>Qualquer serviço agendado pelo Utilizador é passível de cancelamento até 48 horas antes da data/hora em que este iria ter lugar. O cancelamento incorre no pagamento de uma taxa administrativa de 3,5%, incidente sobre o valor do serviço previamente agendado pelo Utilizador, cobrado por via da sua dedução no valor pago pelo Utilizador aquando do agendamento. A restituição do montante a devolver será efetuada por transferência bancária, mediante indicação de IBAN válido por parte do Utilizador.</p>
+		<p>Qualquer serviço é suscetível a reagendamento, sem que tal implique custos para o Utilizador, desde que por si solicitado até 24 horas antes da data/hora do agendamento original.</p>
+		<br>
 		<h3>Responsabilidade</h3>
 		<p>A Sentido Soberano desenvolve os seus melhores esforços para proteger a informação dos Utilizadores contra acessos não autorizados através da Internet. Para o efeito, utiliza sistemas de segurança, regras e outros procedimentos, de modo a garantir a proteção da informação e prevenir o acesso não autorizado à mesma, o uso impróprio, a sua divulgação, perda ou destruição.</p>
 		<p>É, todavia, da responsabilidade do Utilizador garantir e assegurar que o dispositivo que utiliza para aceder ao Site se encontra adequadamente protegido contra softwares nocivos, maliciosos, vírus informáticos, <i>trojans</i>, <i>worms</i> ou outros. A Sentido Soberano não será responsável por erros que possam ocorrer devido a irregularidades do sistema, falha (temporária ou permanente) do Site, das aplicações ou de outras ferramentas.</p>
