--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -69,6 +69,6 @@
 		<h3>Foro competente</h3>
 		<p>Para dirimir todas as questões e litígios que possam surgir, inerentes aos presentes Termos e Condições de Utilização, é competente em exclusivo o foro da Comarca de Coimbra, com expressa renúncia de qualquer outro.</p>
 		<br>
-		<p>Data da última atualização: 5 de abril de 2024.</p>
+		<p>Data da última atualização: 31 de outubro de 2024.</p>
 	</body>
 </html>
