--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -46,7 +46,7 @@
 		<p>Através do Site o Utilizador poderá utilizar as funcionalidades aí disponibilizadas, tais como a solicitação de pedidos de informação através do formulário de contacto disponível no Site.</p>
 		<br>
 		<h3>Cancelamentos e remarcações de serviços</h3>
-		<p>Qualquer serviço agendado pelo Utilizador é passível de cancelamento até 48 horas antes da data/hora em que este iria ter lugar. O cancelamento incorre no pagamento de uma taxa administrativa de 3,5%, incidente sobre o valor do serviço previamente agendado pelo Utilizador, cobrado por via da sua dedução no valor pago pelo Utilizador aquando do agendamento. A restituição do montante a devolver será efetuada por transferência bancária, mediante indicação de IBAN válido por parte do Utilizador.</p>
+		<p>Qualquer serviço agendado pelo Utilizador é passível de cancelamento até 48 horas antes da data/hora em que este iria ter lugar. O cancelamento incorre no pagamento de uma taxa administrativa de 3,5%, incidente sobre o valor do serviço previamente agendado pelo Utilizador, cobrado por via da sua dedução ao valor pago pelo Utilizador aquando do agendamento. A restituição do montante a devolver será efetuada por transferência bancária, mediante indicação de IBAN válido por parte do Utilizador.</p>
 		<p>Qualquer serviço é suscetível a reagendamento, sem que tal implique custos para o Utilizador, desde que por si solicitado até 24 horas antes da data/hora do agendamento original.</p>
 		<br>
 		<h3>Responsabilidade</h3>
