--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -15,7 +15,7 @@
 
 		<h1>TERMOS E CONDIÇÕES DE UTILIZAÇÃO</h1>
 		<br>
-		<p>O presente <i>website</i> (doravante designado por “Site”) foi criado, pertence e é gerido pela Sentido Soberano, Lda., (adiante denominada “Sentido Soberano”), regendo-se a sua utilização por estes Termos e Condições de Utilização.</p>
+		<p>O presente website (doravante designado por “Site”) foi criado, pertence e é gerido pela Sentido Soberano, Lda., (adiante denominada “Sentido Soberano”), regendo-se a sua utilização por estes Termos e Condições de Utilização.</p>
 		<br>
 		<h3>Aceitação dos Termos e Condições de Utilização</h3>
 		<p>O utilizador do Site (doravante referido como “Utilizador”) reconhece que ao usar o Site está a aceitar estes Termos e Condições de Utilização. Caso não concorde com alguma das regras de utilização, não deve utilizar o Site.</p>
@@ -39,7 +39,7 @@
 		<br>
 		<h3>Dados pessoais</h3>
 		<p>O acesso e visita a este Site não implica, por si só, a disponibilização de dados pessoais. No entanto, caso o Utilizador pretenda utilizar alguns dos conteúdos e serviços disponibilizados através do Site, deverá disponibilizar determinados dados pessoais (tais como dados de identificação e dados de contacto).</p>
-		<p>Para obter mais informação acerca do tratamento de dados pessoais no contexto do Site, o Utilizador deverá consultar a “Política de Privacidade e <i>Cookies</i>”, disponível neste Site.</p>
+		<p>Para obter mais informação acerca do tratamento de dados pessoais no contexto do Site, o Utilizador deverá consultar a “Política de Privacidade e Cookies”, disponível neste Site.</p>
 		<br>
 		<h3>Informações</h3>
 		<p>A informação disponibilizada no Site visa essencialmente esclarecer e informar os Utilizadores sobre aspetos relativos à atividade e aos serviços prestados pela Sentido Soberano.</p>
@@ -54,14 +54,14 @@
 		<p>É, todavia, da responsabilidade do Utilizador garantir e assegurar que o dispositivo que utiliza para aceder ao Site se encontra adequadamente protegido contra softwares nocivos, maliciosos, vírus informáticos, <i>trojans</i>, <i>worms</i> ou outros. A Sentido Soberano não será responsável por erros que possam ocorrer devido a irregularidades do sistema, falha (temporária ou permanente) do Site, das aplicações ou de outras ferramentas.</p>
 		<p>A Sentido Soberano não se responsabilizará por quaisquer danos resultantes da utilização indevida ou da impossibilidade de utilização do Site. A informação disponibilizada no Site não constitui qualquer parecer médico, pelo que se aconselha o recurso a um profissional devidamente qualificado sempre que o Utilizador necessite de aconselhamento específico.</p>
 		<br>
-		<h3><i>Links</i> para <i>sites</i> de terceiros</h3>
-		<p>O Site poderá disponibilizar links para páginas de outras entidades que não pertencem nem são operados ou controlados pela Sentido Soberano. A Sentido Soberano não se responsabiliza, aprova ou por qualquer forma apoia ou subscreve o conteúdo desses <i>websites</i>, nem dos <i>websites</i> com eles ligados ou neles referidos. A utilização destes <i>links</i> é da inteira responsabilidade do Utilizador. A criação de <i>links</i> para este Site carece de autorização prévia, por escrito, da Sentido Soberano.</p>
+		<h3>Links para sites de terceiros</h3>
+		<p>O Site poderá disponibilizar links para páginas de outras entidades que não pertencem nem são operados ou controlados pela Sentido Soberano. A Sentido Soberano não se responsabiliza, aprova ou de qualquer forma apoia ou subscreve o conteúdo desses websites, nem dos websites com eles ligados ou neles referidos. A utilização destes links é da inteira responsabilidade do Utilizador. A criação de links para este Site carece de autorização prévia, por escrito, da Sentido Soberano.</p>
 		<br>
 		<h3>Validade dos termos e condições de utilização</h3>
 		<p>Se alguma parte ou disposição dos presentes Termos e Condições de Utilização não for executável ou estiver em conflito com a lei aplicável, a validade das restantes partes ou disposições não será afetada.</p>
 		<br>
 		<h3>Questões</h3>
-		<p>Se tiver alguma questão sobre os presentes Termos e Condições de Utilização, por favor envie-nos o seu pedido de esclarecimento via <i>e-mail</i>, para o endereço info@altusvitae.pt, ou por carta, para Sentido Soberano, Lda., Rua da Esperança, nº. 3, 9970-320 Santa Cruz das Flores.</p>
+		<p>Se tiver alguma questão sobre os presentes Termos e Condições de Utilização, por favor envie-nos o seu pedido de esclarecimento via e-mail, para o endereço info@altusvitae.pt, ou por carta, para Sentido Soberano, Lda., Rua da Esperança, n.º 3, 9970-320 Santa Cruz das Flores.</p>
 		<br>
 		<h3>Lei aplicável</h3>
 		<p>À gestão, administração, utilização e aplicação dos Termos e Condições de Utilização do Site é aplicável a lei portuguesa.</p>
