--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -48,7 +48,7 @@
 		<h3>Cancelamentos, remarcações e faltas de comparência a serviços</h3>
 		<p>Qualquer serviço agendado pelo Utilizador é passível de cancelamento até 48 horas antes da data/hora em que este iria ter lugar. O cancelamento incorre no pagamento de uma taxa administrativa de 3,5%, incidente sobre o valor do serviço previamente agendado pelo Utilizador, cobrado por via da sua dedução ao valor pago pelo Utilizador aquando do agendamento. A restituição do montante a devolver será efetuada por transferência bancária, mediante indicação de IBAN válido por parte do Utilizador.</p>
 		<p>Qualquer serviço é suscetível de reagendamento, sem que tal implique custos para o Utilizador, desde que por si solicitado até 24 horas antes da data/hora do agendamento original.</p>
-		<p>Se passados 7 dias decorridos da data/hora de uma sessão a que o Utilizador não tenha comparecido este não tenha tomado a iniciativa de contactar a Sentido Soberano através de um dos meios disponibilizados para o efeito no Site, a Sentido Soberano reserva-se o direito de considerar o serviço em questão prestado, procedendo à sua faturação.
+		<p>Em caso de não comparência pelo Utilizador, a Sentido Soberano reserva-se o direito de considerar o serviço em questão prestado, procedendo à sua faturação.
 		<br>
 		<h3>Responsabilidade</h3>
 		<p>A Sentido Soberano desenvolve os seus melhores esforços para proteger a informação dos Utilizadores contra acessos não autorizados através da Internet. Para o efeito, utiliza sistemas de segurança, regras e outros procedimentos, de modo a garantir a proteção da informação e prevenir o acesso não autorizado à mesma, o uso impróprio, a sua divulgação, perda ou destruição.</p>
