--- a/termos_condicoes.html
+++ b/termos_condicoes.html
@@ -68,8 +68,8 @@
 		<p>À gestão, administração, utilização e aplicação dos Termos e Condições de Utilização do Site é aplicável a lei portuguesa.</p>
 		<br>
 		<h3>Foro competente</h3>
-		<p>Para dirimir todas as questões e litígios que possam surgir, inerentes aos presentes Termos e Condições de Utilização, é competente em exclusivo o foro da Comarca de Coimbra, com expressa renúncia de qualquer outro.</p>
+		<p>Para dirimir todas as questões e litígios que possam surgir, inerentes aos presentes Termos e Condições de Utilização, é competente em exclusivo o foro da Comarca de Coimbra, com expressa renúncia de qualquer outro.<br> Para efeitos de RAL (Resolução Alternativa de Conflitos de Consumo), fica desde já designado o Centro de Arbitragem de Conflitos de Consumo do Distrito de Coimbra como entidade competente:<br> Morada: Av. Fernão Magalhães, n.º 240, 1.º andar, 3000-172 Coimbra<br>Telefone: 239 821 690/289; endereço de e-mail: geral@centrodearbitragemdecoimbra.com</p>
 		<br>
-		<p>Data da última atualização: 31 de outubro de 2024.</p>
+		<p>Data da última atualização: 17 de março de 2025.</p>
 	</body>
 </html>
